Update from Fidus Writer

--- a/latex/chapter-1.tex
+++ b/latex/chapter-1.tex
@@ -12,26 +12,39 @@
 \maketitle
 
 
+\subsection{Title page}\label{H353005}
+
+
+
+Crisis Management
+
+
+Textbook for Public Health Services
+
+
+Edited by Ute Teichert \& Peter Tinnemann
+
+
+v1.0, 2021
+
+
 \subsection{Pre-release v1.0}\label{H6627615}
 
 
 
-In recent years, crisis management has gained considerably in importance, particularly in public health services. In principle, decision-making authority for the crisis management of biological emergencies resides with the municipal health authorities.
+In recent years, crisis management is gaining considerably in importance, in the public health services in general and in particular since the SARS-CoV-II pandemic globally. In Germany, decision-making authority for crisis management of biological emergencies resides in principle with the municipal health authorities.
 
 
-\textbf{In light of the current situation (as of 31 March 2020) involving the spread of the novel coronavirus, we are hereby providing extracts from a preliminary version of our textbook.}
+\textbf{In light of the current situation (as of 31 March 2020) involving the spread of the novel coronavirus, we are hereby providing extracts from a preliminary version of our textbook (Krisenmanagement) open-access in English to a global audience.}
 
 
-Crisis management tools help staff in public health services ensure that the authorities are able to continue functioning in biological emergencies. As a rule, normal administrative structures cannot cope with the challenges that arise in a crisis. Information and communications management for example must be modified if it is to cope with the increased demands. If sufficient specialist personnel are not available, competences have to be pooled and provided from a central point. This textbook is designed to provide employees of public health offices, as well as other public health institutions, with pointers on how to systematically prepare themselves for preventing hazards in case of crisis, and familiarise them with the basics of crisis management. As well as covering specialised aspects, the textbook also provides recommendations in particular on operational planning and working in teams. It is supplemented with checklists designed to serve as practical tools.
+Crisis management tools support staff in the public health services to ensure that the authorities are able to continue functioning in biological emergencies. As a rule, normal administrative structures cannot cope with the challenges that arise in a crisis. Information and communications management for example must be adapted if it is to cope with increased demands. If sufficient specialist personnel are not available, competences have to be pooled and provided from a more central point. This textbook is designed to provide employees of public health offices, as well as other public health institutions, with pointers on how to systematically prepare themselves for preventing hazards in case of crisis, and familiarise them with the basics of crisis management. As well as covering specialised aspects, the textbook also provides recommendations in particular on operational planning and working in teams. It is supplemented with checklists designed and established in practise to serve as practical tools.
 
 
-The content brought together in this unique textbook is based on the authors' years of theoretical study and practical experience with public health services. \textbf{This textbook is a joint work of all the authors involved, and does not represent the opinion of individual institutions or individual authors.}
+The content brought together in this unique textbook is based on the authors' years of theoretical study and practical experience within public health services. \textbf{This textbook is a joint work of all the authors involved, and does not represent the opinion of individual institutions or individual authors.}
 
 
-We will be updating and expanding it in the future. We would therefore be delighted if you could share with us your suggestions, comments and additions. Please send these to lehrbuch@akademie-oegw.de.
-
-
-We will be using \textbf{\href{https://hypothes.is/}{Hypothes.is}} for your comments and additions to our textbook.
+We are planning to update and expand this textbook in the future. We would therefore be delighted if you could share with us your suggestions, comments and additions. We are using \textbf{\href{https://hypothes.is/}{Hypothes.is}} for your comments and additions to our textbook.
 
 
 \subsection{Publication details}\label{H8111132}
@@ -46,49 +59,50 @@ ISBN 978-1-906496-97-5
 
 DOI \href{https://zenodo.org/deposit/4587727}{10.5281/zenodo.4587727}
 
-Date 2020
+Date 2021
 
 Place Berlin
 
-Academy of Public Health Services in Düsseldorf
 
-Kanzlerstr. 4
+TWH Linking Knowledge UG
 
-40472 Düsseldorf
+Gustav-Heinemann-Ufer 56
 
-Germany
-
-\href{http://www.akademie-oegw.de}{www.akademie-oegw.de}
+50968 Köln
 
 
-The Academy of Public Health Services in Düsseldorf is a public-law institution with legal capacity. It is legally represented by its Director, Dr. med. Ute Teichert, MPH.
-
-
-© 2020 the authors. Creative Commons Attribution ShareAlike 4.0 International (CC BY-SA 4.0) \href{https://creativecommons.org/licenses/by-sa/4.0/deed.de}{https://creativecommons.org/licenses/by-sa/4.0/deed.de}
+© 2021 the authors. Creative Commons Attribution ShareAlike 4.0 International (CC BY-SA 4.0) \href{https://creativecommons.org/licenses/by-sa/4.0/deed.de}{https://creativecommons.org/licenses/by-sa/4.0/deed.de}
 
 Printed by Lightning Source, Ingram Content Group Inc.
 
 
-German language version ISBN 978-3-9812871-2-7 DOI \href{https://doi.org/10.25815/h0ec-f967}{10.25815/h0ec-f967}
+German language version
+
+ISBN 978-3-9812871-2-7
+
+DOI \href{https://doi.org/10.25815/h0ec-f967}{10.25815/h0ec-f967}
 
 \href{https://akademie-oeffentliches-gesundheitswesen.github.io/krisenmanagment/}{GitHub}
+
+
+
 
 
 \subsection{About us}\label{H2129478}
 
 
 
-This textbook is a joint project of the \href{https://www.akademie-oegw.de/startseite.html}{Academy of Public Health Services} and the \href{https://www.tib.eu/en/research-development/open-science}{Open Science Lab} of the \href{https://www.tib.eu/}{TIB} – Leibniz-Information Centre for Science and Technology University Library.
+This textbook is based on the Textbook Krisenmanagement (DOI \href{https://doi.org/10.25815/h0ec-f967}{10.25815/h0ec-f967}), a joint project of the \href{https://www.akademie-oegw.de/startseite.html}{Academy of Public Health Services} and the \href{https://www.tib.eu/en/research-development/open-science}{Open Science Lab} of the \href{https://www.tib.eu/}{TIB} – Leibniz-Information Centre for Science and Technology University Library. Translation from German to English was provided by Engagement Global gGmbh.
 
 
 \subsubsection{Funding}\label{H1593607}
 
 
 
-The project was funded by the German \href{https://www.bundesgesundheitsministerium.de/english-version.html}{Federal Ministry of Health} (BMG).
+The project was funded by the German \href{https://www.bundesgesundheitsministerium.de/english-version.html}{Federal Ministry of Health} (BMG). 
 
 
-The translation of this book into English was supported by Connective Cities. Connective Cities is a cooperation project between the Association of German Cities (Deutscher Städtetag), Deutsche Gesellschaft für Internationale Zusammenarbeit (GIZ) and Engagement Global / Service Agency Communities in One World, on behalf of the German Federal Ministry for Economic Cooperation and Development (BMZ).
+The translation of this book into English was supported by the \href{https://skew.engagement-global.de/connective-cities.html}{Connective Cities Project} of Engagement Global, on behalf of the German Federal Ministry for Economic Cooperation and Development (BMZ).
 
 
 \subsubsection{Open access}\label{H3712911}
@@ -115,7 +129,7 @@ The licence may not provide you with permission to do everything you would need 
 
 
 
-We would be delighted to receive comments and feedback from all readers, regardless of their specific expertise or background. Please write an email to \href{mailto:Tinnemann@akademie-oegw.de}{lehrbuch@akademie-oegw.de}
+We would be delighted to receive comments and feedback from all readers, regardless of their specific expertise or background. We are using \textbf{\href{https://hypothes.is/}{Hypothes.is}} for your comments and additions to our textbook.
 
 
 The textbook is made available as a GitHub repository.
@@ -147,11 +161,11 @@ It is based on the principles of sharing, co-development, community building and
 Authors use digital technologies to write the content This enables a joint process of concurrently writing texts which are designed as a single collectively owned product in their entirety, until then final result is achieved. Chapters or entire books are written in this manner. In intensive three-day book sprints we have worked with up to ten experts on a selected topic Facilitated by a book sprint moderator with experience in media education, participants create joint content on selected topics related to work in the public health service.
 
 
-\subsubsection{How these textbooks were produced}\label{H691848}
+\subsubsection{How the textbook was produced}\label{H691848}
 
 
 
-This textbook is a joint project of the \href{https://www.akademie-oegw.de/startseite.html}{Academy of Public Health Services} and the \href{https://www.tib.eu/en/research-development/open-science}{Open Science Lab} of the \href{https://www.tib.eu/}{TIB} – Leibniz-Information Centre for Science and Technology University Library.
+This original textbook Krisenmanaement was a joint project of the \href{https://www.akademie-oegw.de/startseite.html}{Academy of Public Health Services} and the \href{https://www.tib.eu/en/research-development/open-science}{Open Science Lab} of the \href{https://www.tib.eu/}{TIB} – Leibniz-Information Centre for Science and Technology University Library.
 
 
 Together with teachers from the Academy, experts from different fields of public health have been co-authoring texts for this series of textbooks in book sprints since 2019.
@@ -166,7 +180,7 @@ The initial phase of collaborative writing was followed by an editing phase duri
 The entire textbook series is designed as an Open Educational Resource (OER) and is published under an open licence. This allows free access, editing and further processing by others without restriction or with only minor restrictions.
 
 
-The textbook will be updated and made available as a printed textbook at a reasonable price.
+The original textbook in German and the this textbook will be updated and is available as a printed textbook at a reasonable price.
 
 
 \subsubsection{Disclaimer}\label{H8101608}
@@ -179,10 +193,10 @@ The content brought together in this unique textbook is based on the authors' ye
 \textbf{This text book is a collaborative work by all the authors involved and does not represent the opinion of individual institutions for which the authors work.}
 
 
-The authors, editors and the Academy of Public Health Services make every effort to ensure that the information accessible through this book is correct, complete or up-to-date, but accept no liability for this. They make this textbook and its contents available on an 'as is' basis, and give no assurances or guarantees of any kind whatsoever with respect to this book or its content.
+The authors, editors and translators made every effort to ensure that the information accessible through this book is correct, complete or up-to-date, but accept no liability for this. They make this textbook and its contents available on an 'as is' basis, and give no assurances or guarantees of any kind whatsoever with respect to this book or its content.
 
 
-Neither the authors, the editors, the Academy of Public Health Services or any other actors involved are liable for any damages resulting from, or connected with, the use of this book. This is a comprehensive limitation of liability that applies to all damage of any kind, including (but not restricted to) compensatory, direct, indirect or consequential damages; loss of data, income or profit; loss of or damage to property; and claims by third parties.
+Neither the authors, the editors, the translators or any other actors involved are liable for any damages resulting from, or connected with, the use of this book. This is a comprehensive limitation of liability that applies to all damage of any kind, including (but not restricted to) compensatory, direct, indirect or consequential damages; loss of data, income or profit; loss of or damage to property; and claims by third parties.
 
 
 References to other websites, literature or other sources are provided for information purposes only, and do not constitute an endorsement of websites or other sources. Readers should also be aware that websites referred to in this textbook are subject to change.
@@ -280,9 +294,9 @@ Academy of Public Health Services, Berlin
 \textbf{Johannes Wilm}, and the\textbf{ }\textbf{\href{https://www.fiduswriter.org/who-we-are/}{FidusWriter.org team}},\textbf{ }for their technical\textbf{ }support.
 
 
-The \textbf{Federal Ministry of Health,} which funded the collaborative creation of our textbook. Without this funding the project would not have been possible.
+The \textbf{German} \textbf{Federal Ministry of Health }(Bundesministerium für Gesundheit)\textbf{,} which funded the collaborative creation of our textbook. Without this funding the project would not have been possible.
 
 
-\textbf{Dr.med. Ute Teichert }for her enthusiasm and tirelesssupport of the project.
+The translation of this book into English was financed and supported by \textbf{Engagement Global GmbH}, on behalf of the \textbf{German Federal Ministry for Economic Cooperation and Development} (Bundesministerium für wirtschaftliche Zusammenarbeit und Entwicklung).
 
 \end{document}
