Update from Fidus Writer

--- a/latex/chapter-10.tex
+++ b/latex/chapter-10.tex
@@ -3,15 +3,9 @@
 \usepackage{tabu}
 \begin{document}
 
-\title{CRI11Annex – Checklist for infrastructure and resources in the crisis team}
+\title{CRI11Annex-Checklist for public health offices in crisis mode}
 
 \maketitle
-
-
-
-
-
- 
 
 
  
@@ -22,7 +16,7 @@
 
 
 
-\emph{\textbf{Topic?}} & \emph{\textbf{Title:}} & \emph{\textbf{Infrastructure and resources in the crisis team}}
+\emph{\textbf{Topic?}}        &  & \emph{\textbf{Title: Public health offices in crisis mode}}
  \\
 
 
@@ -32,136 +26,179 @@ Target group:  &  & Date:
 
 \end{tabu}
 
-                                                         
+                    
 
 
-\subsubsection{Rooms}\label{H4260866}
+\subsubsection{Alerts}\label{H1727143}
 
 
 
-☐   Prepare room for the work of the team
+☐   Rules for receipt of alerts (via on-call service?)
 
 
-☐   Prepare room for discussions of the situation
+☐   Checklist for first recipient of alert/on-call service
 
 
-☐   Prepare IT equipment
+☐   Alert list (scenario-dependent)
 
 
-☐   Organise keys
+☐   Internal alert list for the public health office
 
 
-\subsubsection{IT equipment}\label{H5650686}
+☐   Notification list for external contacts 
 
 
+\subsubsection{Rules for access to public health office}\label{H368347}
 
-☐   Provide additional i-workstations (notebooks)
 
 
-☐   Install copier and printer near the team room
+☐   Persons authorised to access
 
 
-☐   Have the beamer ready
+☐   Organisational arrangements for access (which routes, location of key cabinets etc.)
 
 
-☐   Set up group mailbox for the team
+\subsubsection{Organisation}\label{H6256762}
 
 
-☐   Create a central data directory
 
+☐   Define structure and scope of roles
 
-☐   Create accounts by function
 
+☐   Take into account integration of the crisis/work team into the crisis team structures of the region
 
-☐   Set up access to Twitter and Facebook and check availability at the workplace
 
+☐   Take into account the unfolding situation when setting up the team
 
-☐   Redundant IT connection independent of the in-house network
 
+☐   Define tasks and agree these with heads of institution
 
-\subsubsection{Telephone and fax}\label{H9723828}
 
+☐   Define processes/channels of communication
 
 
-☐   Have special telephone connections ready for crises
+☐   Define regular procedures e.g. discussions of the situation (schedule)
 
 
-☐   Have special fax connections ready for crises
+☐   Define specialised areas of work, assign personnel and determine responsibilities
 
 
-☐   Define and communicate point of availability of team
+ 
 
 
-☐   Staffing to ensure point of availability of team 
+\subsubsection{Human resources}\label{H6553733}
 
 
-☐   Set up answering machine for point of availability of team
 
+☐   Overview of roles to be assigned
 
-☐   Set up hunt group for a hotline (with answering machine)
 
+☐   Overview of available staff
 
-☐   Make technical preparations for call forwarding (handling instruction)
 
+☐   Staff planning overview
 
-☐   Have telephone set ready for conference calls
 
+☐   Specimen of duty roster
 
-☐   Create redundant telephone facilities (landline independent of in-house network and/or additional mobile phones - prepaid, to be activated in case of emergency) 
 
+☐   Overview of staff presence 
 
-\subsubsection{Office equipment/technology}\label{H4829806}
 
+☐   Involvement of staff council 
 
 
-☐   Board, flipchart for presenting the situation
+☐   Overtime arrangements, ban on leave
 
 
-☐   Whiteboard for team room
+☐   Foreign language skills of staff
 
 
-☐   Board for documenting tasks
+☐   Staffing of hotline, if applicable
 
 
-☐   Install copier and printer near the team room
+☐   Administrative support (staff deployment, duty scheduling)
 
 
-☐   Cloakroom lockers for external staff
+☐   External consultants from other authorities and institutions 
 
 
-☐   Hang clocks in team room
+\subsubsection{Team leadership}\label{H1488738}
 
 
-\subsubsection{Materials}\label{H3998633}
 
+☐   Select personnel, think about deputies 
 
 
-☐   Provide basic office supplies
+☐   Draw up checklist for tasks
 
 
-☐   Presentation case
+☐   How will task control be performed? 
 
 
-☐   Crockery, glasses, coffee machine
+\subsubsection{Situation reports }\label{H3845044}
 
 
-☐   Maps (possibly electronic)
 
+☐   Identify and train suitable staff
 
-\subsubsection{Templates}\label{H1955050}
 
+☐   Available data from existing sources
 
 
- ☐   Prepare distribution lists and update them in an emergency
+☐   Specimen mission diary (link to template) 
 
 
-☐   Template for memos
+☐   Specimen situation report
 
 
-☐   Template for mission diary
+\subsubsection{Infrastructure (rooms, technology)}\label{H5542312}
 
 
-☐   Template for minutes
+
+\textbf{For details see separate checklist}
+
+
+☐   Room plan
+
+
+☐   Technical equipment
+
+
+☐   Alternative location
+
+
+  
+
+
+\subsubsection{Organisation  }\label{H5459435}
+
+
+
+\subsubsection{Technical content, FAQs}\label{H2920450}
+
+
+
+☐   Responsible for preparing content
+
+
+☐   Sources (RKI, BMG, WHO etc.)
+
+
+☐   Preparation of handouts for workstations/updates
+
+
+\subsubsection{Staffing of hotline}\label{H670308}
+
+
+
+ ☐   Professional support (external staff, contract workers if possible)
+
+
+☐   Staffing of hotline (shift change every 4 -6 hours) 
+
+
+☐   Duty roster
 
 
  
@@ -172,16 +209,25 @@ Target group:  &  & Date:
 
 
 
-\emph{\textbf{Institution:}} &  & \emph{\textbf{Version:}}
+\emph{\textbf{Institution:}}      &  & \emph{\textbf{Version:}}
  \\
 
 
-Prepared by:  &  & Filed under:
+Prepared by: &  & Filed under:
  \\
 \hline
 
 \end{tabu}
 
-                                                           
+                                                      
+
+
+ 
+
+
+ 
+
+
+ 
 
 \end{document}
