Update from Fidus Writer

--- a/latex/chapter-11.tex
+++ b/latex/chapter-11.tex
@@ -3,7 +3,7 @@
 \usepackage{tabu}
 \begin{document}
 
-\title{CRI11Annex – Checklist as a planning guide for public health offices}
+\title{CRI11Annex – Checklist for infrastructure and resources in the crisis team}
 
 \maketitle
 
@@ -14,12 +14,15 @@
  
 
 
+ 
+
+
 \begin{tabu} to \textwidth { |X|X|X| }
 \hline
 
 
 
-\emph{\textbf{Topic?}}  &  & \emph{\textbf{Title: Planning guide for public health offices}}
+\emph{\textbf{Topic?}} & \emph{\textbf{Title:}} & \emph{\textbf{Infrastructure and resources in the crisis team}}
  \\
 
 
@@ -29,134 +32,139 @@ Target group:  &  & Date:
 
 \end{tabu}
 
-   
+                                                         
 
 
-\subsubsection{Coordination}\label{H2442121}
+\subsubsection{Rooms}\label{H4260866}
 
 
 
-☐   Situation-dependent decision on internal management structure
+☐   Prepare room for the work of the team
 
 
-☐   Coordination of measures
+☐   Prepare room for discussions of the situation
 
 
-☐   Documentation and evaluation
+☐   Prepare IT equipment
 
 
-☐   Ongoing evaluation of the incident
+☐   Organise keys
 
 
-☐   Demobilisation
+\subsubsection{IT equipment}\label{H5650686}
 
 
-\subsubsection{Risk management}\label{H3384617}
 
+☐   Provide additional i-workstations (notebooks)
 
 
-☐   Risk assessment 
+☐   Install copier and printer near the team room
 
 
-\subsubsection{HR management}\label{H9541090}
+☐   Have the beamer ready
 
 
+☐   Set up group mailbox for the team
 
-☐   Increase human resources (e.g. redeploy personnel from areas which now tie up fewer staff due to suspension of elective admissions; include medical students in their final year of training etc.)
 
+☐   Create a central data directory
 
-☐   Exclude staff with symptoms from patient care
 
+☐   Create accounts by function
 
-\subsubsection{Communications}\label{H1662235}
 
+☐   Set up access to Twitter and Facebook and check availability at the workplace
 
 
-☐   Risk and crisis communication
+☐   Redundant IT connection independent of the in-house network
 
 
-☐   Internal communication within the municipality
+\subsubsection{Telephone and fax}\label{H9723828}
 
 
-☐   Public information
 
+☐   Have special telephone connections ready for crises
 
-☐   Prepare press work professionally, possibly set up hotline 
 
+☐   Have special fax connections ready for crises
 
-\subsubsection{Outbreak investigation }\label{H6402131}
 
+☐   Define and communicate point of availability of team
 
 
-☐   Occupational safety and health, ensure provision of personal protective equipment
+☐   Staffing to ensure point of availability of team 
 
 
-☐   Routine epidemiological surveillance
+☐   Set up answering machine for point of availability of team
 
 
-☐   Identify contacts, categorise contacts
+☐   Set up hunt group for a hotline (with answering machine)
 
 
-☐   Define anti-epidemic measures pursuant to IfSG
+☐   Make technical preparations for call forwarding (handling instruction)
 
 
-☐   Order diagnostic measures and decide on scope of investigation
+☐   Have telephone set ready for conference calls
 
 
-☐   Make arrangements for sampling and sample transport
+☐   Create redundant telephone facilities (landline independent of in-house network and/or additional mobile phones - prepaid, to be activated in case of emergency) 
 
 
-☐   Protective measures to reduce contacts
+\subsubsection{Office equipment/technology}\label{H4829806}
 
 
-☐   Organise and monitor the patient
 
+☐   Board, flipchart for presenting the situation
 
-☐   Define and monitor isolation arrangements 
 
+☐   Whiteboard for team room
 
-☐   Decide on nature and scope of disinfection measures and their monitoring
 
+☐   Board for documenting tasks
 
-☐   Decide on decontamination measures, if applicable 
 
+☐   Install copier and printer near the team room
 
-\subsubsection{Advice}\label{H4067619}
 
+☐   Cloakroom lockers for external staff
 
 
-☐   Advise affected persons on what to do
+☐   Hang clocks in team room
 
 
-☐   Inform and advise other public authorities, institutions and the public
+\subsubsection{Materials}\label{H3998633}
 
 
-☐   Set up hotline
 
+☐   Provide basic office supplies
 
-\subsubsection{REGULATORY TASKS}\label{H7293213}
 
+☐   Presentation case
 
 
-☐   Ordering of isolation by the medical officer
+☐   Crockery, glasses, coffee machine
 
 
-☐   Ordering of autopsy, certification of death, oversight of transport of corpses and cremation
+☐   Maps (possibly electronic)
 
 
-☐   Ordering of prohibitions on activities, participation and visits
+\subsubsection{Templates}\label{H1955050}
 
 
-☐   Ordering of quarantine and isolation
 
+ ☐   Prepare distribution lists and update them in an emergency
 
-☐   Disposal management
 
+☐   Template for memos
 
-☐   Possibly coordination of vaccinations
 
+☐   Template for mission diary
 
-☐   Possibly organisation of post-exposure prophylaxis
+
+☐   Template for minutes
+
+
+ 
 
 
 \begin{tabu} to \textwidth { |X|X|X| }
@@ -168,18 +176,12 @@ Target group:  &  & Date:
  \\
 
 
-Prepared by: &  &  Filed under:
+Prepared by:  &  & Filed under:
  \\
 \hline
 
 \end{tabu}
 
- 
-
-
- 
-
-
- 
+                                                           
 
 \end{document}
