Update from Fidus Writer

--- a/latex/chapter-9.tex
+++ b/latex/chapter-9.tex
@@ -1,233 +1,76 @@
 \documentclass{article}
 
-\usepackage{tabu}
+\usepackage{hyperref}
 \begin{document}
 
-\title{CRI11Annex-Checklist for public health offices in crisis mode}
+\title{CRI11Annex - Abbreviations}
 
 \maketitle
 
 
- 
 
 
-\begin{tabu} to \textwidth { |X|X|X| }
-\hline
 
+\textbf{ABAS }Committee on Biological Agents at the Federal Ministry of Labour and Social Affairs
 
 
-\emph{\textbf{Topic?}}        &  & \emph{\textbf{Title: Public health offices in crisis mode}}
- \\
+\textbf{ADR }\emph{Accord européen relatif au transport international des}\emph{\textbf{ }}\emph{marchandises Dangereuses par Route} (European Agreement concerning the International Carriage of Dangerous Goods by Road)
 
 
-Target group:  &  & Date:
- \\
-\hline
+\textbf{AFT }Analytical Task Force
 
-\end{tabu}
 
-                    
+\textbf{BBK }Federal Office for Civil Protection and Disaster Assistance\textbf{ }\href{https://www.bbk.bund.de/EN/Home/home_node.html}{(https://www.bbk.bund.de/EN/Home/home\_node.html)}
 
 
-\subsubsection{Alerts}\label{H1727143}
+\textbf{BMG }Federal Ministry of Health\textbf{ }\href{https://www.bundesgesundheitsministerium.de/en/en.html}{(https://www.bundesgesundheitsministerium.de/en/en.html)}
 
 
+\textbf{BMI }Federal Ministry of the Interior, Building and Community\textbf{ }\href{https://www.bmi.bund.de/EN/home/home_node.html}{(https://www.bmi.bund.de/EN/home/home\_node.html)} 
 
-☐   Rules for receipt of alerts (via on-call service?)
 
+\textbf{BMU }Federal Ministry for the Environment, Nature Conservation and Nuclear\textbf{ }Safety \href{https://www.bmu.de/en/}{(https://www.bmu.de/en/)}
 
-☐   Checklist for first recipient of alert/on-call service
 
+\textbf{CBRN }chemical, biological, radiological and nuclear
 
-☐   Alert list (scenario-dependent)
 
+\textbf{FFP }Filtering Face Piece
 
-☐   Internal alert list for the public health office
 
+\textbf{HCID }High Consequence Infectious Diseases \textbf{ }
 
-☐   Notification list for external contacts 
 
+\textbf{GGVSEB }Ordinance on the transport of dangerous goods by road, rail and inland waterways
 
-\subsubsection{Rules for access to public health office}\label{H368347}
 
+\textbf{IfSG }Protection against Infection Act
 
 
-☐   Persons authorised to access
+\textbf{IGV }International Health Regulations
 
 
-☐   Organisational arrangements for access (which routes, location of key cabinets etc.)
+\textbf{MCI }Mass-Casualty Incident
 
 
-\subsubsection{Organisation}\label{H6256762}
+\textbf{PEP }Post-Exposure Prophylaxis
 
 
+\textbf{RKI }Robert Koch Institute (\href{https://www.rki.de/EN/Home/homepage_node.html}{https://www.rki.de/EN/Home/homepage\_node.html})
 
-☐   Define structure and scope of roles
 
+\textbf{SARS} Severe Acute Respiratory Syndrome
 
-☐   Take into account integration of the crisis/work team into the crisis team structures of the region
 
+\textbf{STAKOB }Competence and Treatment Centres for high consequence infectious diseases
 
-☐   Take into account the unfolding situation when setting up the team
 
+\textbf{TRBA }Technical Rules for Biological Agents
 
-☐   Define tasks and agree these with heads of institution
 
+\textbf{VHF }Viral Haemorrhagic Fever
 
-☐   Define processes/channels of communication
 
-
-☐   Define regular procedures e.g. discussions of the situation (schedule)
-
-
-☐   Define specialised areas of work, assign personnel and determine responsibilities
-
-
- 
-
-
-\subsubsection{Human resources}\label{H6553733}
-
-
-
-☐   Overview of roles to be assigned
-
-
-☐   Overview of available staff
-
-
-☐   Staff planning overview
-
-
-☐   Specimen of duty roster
-
-
-☐   Overview of staff presence 
-
-
-☐   Involvement of staff council 
-
-
-☐   Overtime arrangements, ban on leave
-
-
-☐   Foreign language skills of staff
-
-
-☐   Staffing of hotline, if applicable
-
-
-☐   Administrative support (staff deployment, duty scheduling)
-
-
-☐   External consultants from other authorities and institutions 
-
-
-\subsubsection{Team leadership}\label{H1488738}
-
-
-
-☐   Select personnel, think about deputies 
-
-
-☐   Draw up checklist for tasks
-
-
-☐   How will task control be performed? 
-
-
-\subsubsection{Situation reports }\label{H3845044}
-
-
-
-☐   Identify and train suitable staff
-
-
-☐   Available data from existing sources
-
-
-☐   Specimen mission diary (link to template) 
-
-
-☐   Specimen situation report
-
-
-\subsubsection{Infrastructure (rooms, technology)}\label{H5542312}
-
-
-
-\textbf{For details see separate checklist}
-
-
-☐   Room plan
-
-
-☐   Technical equipment
-
-
-☐   Alternative location
-
-
-  
-
-
-\subsubsection{Organisation  }\label{H5459435}
-
-
-
-\subsubsection{Technical content, FAQs}\label{H2920450}
-
-
-
-☐   Responsible for preparing content
-
-
-☐   Sources (RKI, BMG, WHO etc.)
-
-
-☐   Preparation of handouts for workstations/updates
-
-
-\subsubsection{Staffing of hotline}\label{H670308}
-
-
-
- ☐   Professional support (external staff, contract workers if possible)
-
-
-☐   Staffing of hotline (shift change every 4 -6 hours) 
-
-
-☐   Duty roster
-
-
- 
-
-
-\begin{tabu} to \textwidth { |X|X|X| }
-\hline
-
-
-
-\emph{\textbf{Institution:}}      &  & \emph{\textbf{Version:}}
- \\
-
-
-Prepared by: &  & Filed under:
- \\
-\hline
-
-\end{tabu}
-
-                                                      
-
-
- 
-
-
- 
-
-
- 
+\textbf{PPE }Personal Protective Equipment
 
 \end{document}
