--- a/latex/chapter-13.tex
+++ b/latex/chapter-13.tex
@@ -1,9 +1,10 @@
 \documentclass{article}
 
+\usepackage{hyperref}
 \usepackage{tabu}
 \begin{document}
 
-\title{CRI11Annex – Checklist for communications}
+\title{CRI11Annex – Checklist as a planning guide for hospitals}
 
 \maketitle
 
@@ -11,6 +12,12 @@
 
 
 
+The checklist below is based on the content of Germany's National Pandemic Preparedness Plan Part I e\href{file:///C:\Users\boesl_reg\AppData\Local\Microsoft\Windows\INetCache\Content.Outlook\SFW45WES\(https:\edoc.rki.de\handle\176904\187%20–%20German%20only)}{(https://edoc.rki.de/handle/176904/187 – German only).}
+
+
+
+
+
  
 
 
@@ -19,11 +26,11 @@
 
 
 
-\emph{\textbf{Topic?}} & \emph{\textbf{Title:}} & \emph{\textbf{Communications}}
+\emph{\textbf{Title:}} &  & \emph{\textbf{Planning guide for hospitals}}
  \\
 
 
-Target group:  &  & Date:
+Target group &   & Date
  \\
 \hline
 
@@ -32,178 +39,190 @@ Target group:  &  & Date:
  
 
 
-\subsubsection{Selecting the form of communication}\label{H3683887}
+\subsubsection{Background}\label{H7945097}
 
 
 
-☐   Press release
+In a widespread endemic/pandemic it is to be assumed that, compared to a limited outbreak, the total number of sick people as well as the proportion of seriously ill patients will be significantly higher. Consequently, an increased burden on inpatient hospital care is to be expected, and capacities may be overstretched.
 
 
-☐   Press conference/expert interview
+\emph{\textbf{BUT: Doctors, nurses and other hospital staff may themselves be absent due to illness, and existing capacities can also be limited in this way.}}
 
 
-☐   Hotline
+The massive influx of patients requiring inpatient treatment, some of whom require intensive care/ventilation, requires hospitals to clearly define organisational measures in order to ensure that these needs can be met.
 
 
-☐   FAQs
+Planning and preparation at the local/sub-regional level require the involvement of all crisis and disaster response structures. 
 
 
-☐   Website of the administrative unit
+\subsubsection{Preparatory measures}\label{H3752751}
 
 
-☐   Social media (e.g. Twitter, Instagram) 
 
+☐   Vaccinate staff against seasonal influenza
 
-\subsubsection{Content-related preparation }\label{H351953}
 
+☐   Align contingency plans, particularly for hospitals and public health offices, with pandemic preparedness plan
 
 
-☐   What is the current situation?
+☐   Inform and train staff on contingency plans and hygiene management
 
 
-☐   What has happened, when and where?
+\subsubsection{
 
+Organisational measures to ensure inpatient care}\label{H2170902}
 
-☐   What damage has been caused?
 
 
-☐   How many people (number) are affected?
+☐   Create/increase bed capacities for additional patients
 
 
-☐   How is a situation likely to develop? Best case vs. worst case
+☐   Suspend elective admissions
 
 
-☐   What action has been taken so far by the authorities?
+☐   Discharge patients as soon as possible
 
 
-☐   What are the authorities planning to do? Activities?
+☐   Involve other wards (e.g. dermatology, ophthalmology – taking into account pandemic-specific requirements)
 
 
-☐   Who will be affected? What (behavioural) rules follow as a result of the incident?
+\subsubsection{HR management}\label{H8420461}
 
 
-☐   What specialist information is relevant?
 
+☐   Increase human resources (e.g. redeploy personnel from areas which now tie up fewer staff due to suspension of elective admissions; include medical students in their final year of training etc.)
 
-☐   What information do regional/national bodies have in reserve?
 
+☐   Exclude staff with symptoms from patient care
 
-☐   What easy-to-understand information is relevant? 
 
+\subsubsection{Stockpiling/management strategy for rapid procurement in case of an incident}\label{H3837555}
 
-☐   What are the most important messages for the general public?
 
 
-\subsubsection{Press release}\label{H7689813}
+☐   Antibiotics, analgesics, sedatives
 
 
+☐   Disinfectants
 
-☐   What? When? Where? Who? 
 
+☐   Personal protective equipment (PPE):
 
-☐   Contact person 
 
+☐   ☐ disposable gloves 
 
-☐   Date, time if known
 
+☐   ☐ surgical masks
 
-☐   Website, social media, further information and contact data if available 
 
+☐   ☐ FFP2 masks/FFP3 masks 
 
-☐   Press spokesperson
 
+\subsubsection{Inform and train staff}\label{H5485324}
 
-☐   Other competent contacts, e.g. fire service, police, (higher) public health authorities, senate department
 
 
+☐ Regularly refresh level of information of staff: 
 
 
+☐   ☐ organisational preparations
 
-\subsection{Checklist – press conference}\label{H59697}
 
+☐   ☐ schedules 
 
 
-(based on preliminary work by Christoph Lang, former Director of the Press Office, Senate Department for Health and Equality)
+☐   ☐ hygiene management
 
 
-\subsubsection{Invitation}\label{H6901633}
+☐   Specific training in patient treatment and care for staff redeployed from other areas
 
 
+\subsubsection{Measures for personal protection}\label{H2576398}
 
-☐   Specified time, location and duration 
 
 
-☐   Support for media representatives (possibly on site)
+☐   Anti-viral prophylaxis, where appropriate
 
 
-☐   Designate room for individual interviews (radio, podcasts, television)
+☐   Vaccination, where appropriate 
 
 
-☐   Prepare press folder
+\subsubsection{Equipment of treatment units}\label{H2443189}
 
 
-☐   Specify briefed interview partners
 
+☐   Cohort isolation must be possible; i.e. 'ward sluice' or sluice in foyer of a building used in its entirety as a treatment unit
 
-☐   Determine telephone availability  
 
+☐   The ventilation system should be checked in order to ascertain what measures can be taken to prevent further spread into other areas of the hospital.
 
-\subsubsection{Cordons/restrictions on access}\label{H5004432}
 
+☐   Possibility of oxygen supply (if possible a central supply)
 
 
- ☐   Briefing for security services
+☐   Ventilation beds
 
 
-\subsubsection{Press room}\label{H3108982}
+☐   Medical equipment (e.g. catheters, infusion devices, medicines)
 
 
+☐   X-ray units (including mobile X-ray machines)
 
-☐   Catering (e.g. beverages, snacks, for example sandwiches)
 
+☐   Ultrasound, ECG, defibrillator unit, pulse oximetry  
 
-☐   Work facilities: chairs and desks
 
+\subsubsection{Organisation}\label{H5831071}
 
-☐   Some power outlets (provide multi-sockets if needed) for charging smartphones and notebooks
 
 
-☐   Ideally also WLAN (provide access codes if necessary)
+☐   Separate area for admission of infectious patients
 
 
-☐   Prepare screens/pinboards and flipcharts
+☐   Check indication for admission 
 
 
-☐   Specify TV-appropriate background for interviews
+☐   Separate treatment area from remaining care provision, if possible also include X-ray area 
 
 
-\subsubsection{Support for journalists}\label{H6595140}
+☐   The treatment area should include an ICU. 
 
 
+☐   Manage bed capacities 
 
-☐   Trained officer (press spokesperson) permanently available
 
+\subsubsection{Hygiene measures in the hospital }\label{H9502955}
 
-☐   Alternative -– officer permanently on call?
 
 
-☐   Specify telephone availability, possibly hotline
+The following sources provide important technical recommendations:
 
 
-\subsubsection{Regular press briefings}\label{H8837330}
+☐   RKI: Recommendation of the RKI for hygiene measures in patients with suspected or proven influenza
 
 
+☐   BAuA: Resolution 609 – Occupational safety and health when influenza occurs, with a particular focus on respiratory protection 
 
-☐   Who talks? 
 
+In addition, hygiene plans should also be reviewed.
 
-☐   Are the relevant persons informed? 
 
+☐   Personal protective measures for medical staff
 
-☐   Media training completed?
 
+☐   Waste disposal according to waste code AS 180104 pursuant to LAGA 
 
-☐   Experts on site? In contact with media representatives?
+
+☐   Internal patient transport
+
+
+If possible the patient should wear a surgical mask, and staff should wear protective clothing and a respirator mask. Contact surfaces and means of transport must be disinfected immediately after transport.
+
+
+☐   Dealing with the deceased 
+
+
+Handling the remains of deceased COVID-19 patients (as of 4 March 2020) does not require special containment as in the case of highly contagious infectious diseases of a different aetiology. When standard hygiene rules are applied, handling infectious corpses does not pose a particular risk of infection. Unprotected contact with secretions that contain pathogens should generally be avoided.
 
 
 \begin{tabu} to \textwidth { |X|X|X| }
@@ -211,15 +230,18 @@ Target group:  &  & Date:
 
 
 
-\emph{\textbf{Institution:}}   &  & \emph{\textbf{Version:}}
+\emph{\textbf{Institution:}} &  & \emph{\textbf{Version:}}
  \\
 
 
-Prepared by:  &  & Filed under:
+Prepared by: &  & Filed under:
  \\
 \hline
 
 \end{tabu}
+
+ 
+
 
  
 
