--- a/latex/chapter-12.tex
+++ b/latex/chapter-12.tex
@@ -1,18 +1,11 @@
 \documentclass{article}
 
-\usepackage{hyperref}
 \usepackage{tabu}
 \begin{document}
 
-\title{CRI11Annex – Checklist as a planning guide for hospitals}
+\title{CRI11Annex – Checklist as a planning guide for public health offices}
 
 \maketitle
-
-
-
-
-
-The checklist below is based on the content of Germany's National Pandemic Preparedness Plan Part I e\href{file:///C:\Users\boesl_reg\AppData\Local\Microsoft\Windows\INetCache\Content.Outlook\SFW45WES\(https:\edoc.rki.de\handle\176904\187%20–%20German%20only)}{(https://edoc.rki.de/handle/176904/187 – German only).}
 
 
 
@@ -26,67 +19,46 @@ The checklist below is based on the content of Germany's National Pandemic Prepa
 
 
 
-\emph{\textbf{Title:}} &  & \emph{\textbf{Planning guide for hospitals}}
+\emph{\textbf{Topic?}}  &  & \emph{\textbf{Title: Planning guide for public health offices}}
  \\
 
 
-Target group &   & Date
+Target group:  &  & Date:
  \\
 \hline
 
 \end{tabu}
 
- 
+   
 
 
-\subsubsection{Background}\label{H7945097}
-
-
-
-In a widespread endemic/pandemic it is to be assumed that, compared to a limited outbreak, the total number of sick people as well as the proportion of seriously ill patients will be significantly higher. Consequently, an increased burden on inpatient hospital care is to be expected, and capacities may be overstretched.
-
-
-\emph{\textbf{BUT: Doctors, nurses and other hospital staff may themselves be absent due to illness, and existing capacities can also be limited in this way.}}
-
-
-The massive influx of patients requiring inpatient treatment, some of whom require intensive care/ventilation, requires hospitals to clearly define organisational measures in order to ensure that these needs can be met.
-
-
-Planning and preparation at the local/sub-regional level require the involvement of all crisis and disaster response structures. 
-
-
-\subsubsection{Preparatory measures}\label{H3752751}
+\subsubsection{Coordination}\label{H2442121}
 
 
 
-☐   Vaccinate staff against seasonal influenza
+☐   Situation-dependent decision on internal management structure
 
 
-☐   Align contingency plans, particularly for hospitals and public health offices, with pandemic preparedness plan
+☐   Coordination of measures
 
 
-☐   Inform and train staff on contingency plans and hygiene management
+☐   Documentation and evaluation
 
 
-\subsubsection{
-
-Organisational measures to ensure inpatient care}\label{H2170902}
+☐   Ongoing evaluation of the incident
 
 
-
-☐   Create/increase bed capacities for additional patients
-
-
-☐   Suspend elective admissions
+☐   Demobilisation
 
 
-☐   Discharge patients as soon as possible
+\subsubsection{Risk management}\label{H3384617}
 
 
-☐   Involve other wards (e.g. dermatology, ophthalmology – taking into account pandemic-specific requirements)
+
+☐   Risk assessment 
 
 
-\subsubsection{HR management}\label{H8420461}
+\subsubsection{HR management}\label{H9541090}
 
 
 
@@ -96,133 +68,95 @@ Organisational measures to ensure inpatient care}\label{H2170902}
 ☐   Exclude staff with symptoms from patient care
 
 
-\subsubsection{Stockpiling/management strategy for rapid procurement in case of an incident}\label{H3837555}
+\subsubsection{Communications}\label{H1662235}
 
 
 
-☐   Antibiotics, analgesics, sedatives
+☐   Risk and crisis communication
 
 
-☐   Disinfectants
+☐   Internal communication within the municipality
 
 
-☐   Personal protective equipment (PPE):
+☐   Public information
 
 
-☐   ☐ disposable gloves 
+☐   Prepare press work professionally, possibly set up hotline 
 
 
-☐   ☐ surgical masks
+\subsubsection{Outbreak investigation }\label{H6402131}
 
 
-☐   ☐ FFP2 masks/FFP3 masks 
 
+☐   Occupational safety and health, ensure provision of personal protective equipment
 
-\subsubsection{Inform and train staff}\label{H5485324}
 
+☐   Routine epidemiological surveillance
 
 
-☐ Regularly refresh level of information of staff: 
+☐   Identify contacts, categorise contacts
 
 
-☐   ☐ organisational preparations
+☐   Define anti-epidemic measures pursuant to IfSG
 
 
-☐   ☐ schedules 
+☐   Order diagnostic measures and decide on scope of investigation
 
 
-☐   ☐ hygiene management
+☐   Make arrangements for sampling and sample transport
 
 
-☐   Specific training in patient treatment and care for staff redeployed from other areas
+☐   Protective measures to reduce contacts
 
 
-\subsubsection{Measures for personal protection}\label{H2576398}
+☐   Organise and monitor the patient
 
 
+☐   Define and monitor isolation arrangements 
 
-☐   Anti-viral prophylaxis, where appropriate
 
+☐   Decide on nature and scope of disinfection measures and their monitoring
 
-☐   Vaccination, where appropriate 
 
+☐   Decide on decontamination measures, if applicable 
 
-\subsubsection{Equipment of treatment units}\label{H2443189}
 
+\subsubsection{Advice}\label{H4067619}
 
 
-☐   Cohort isolation must be possible; i.e. 'ward sluice' or sluice in foyer of a building used in its entirety as a treatment unit
 
+☐   Advise affected persons on what to do
 
-☐   The ventilation system should be checked in order to ascertain what measures can be taken to prevent further spread into other areas of the hospital.
 
+☐   Inform and advise other public authorities, institutions and the public
 
-☐   Possibility of oxygen supply (if possible a central supply)
 
+☐   Set up hotline
 
-☐   Ventilation beds
 
+\subsubsection{REGULATORY TASKS}\label{H7293213}
 
-☐   Medical equipment (e.g. catheters, infusion devices, medicines)
 
 
-☐   X-ray units (including mobile X-ray machines)
+☐   Ordering of isolation by the medical officer
 
 
-☐   Ultrasound, ECG, defibrillator unit, pulse oximetry  
+☐   Ordering of autopsy, certification of death, oversight of transport of corpses and cremation
 
 
-\subsubsection{Organisation}\label{H5831071}
+☐   Ordering of prohibitions on activities, participation and visits
 
 
+☐   Ordering of quarantine and isolation
 
-☐   Separate area for admission of infectious patients
 
+☐   Disposal management
 
-☐   Check indication for admission 
 
+☐   Possibly coordination of vaccinations
 
-☐   Separate treatment area from remaining care provision, if possible also include X-ray area 
 
-
-☐   The treatment area should include an ICU. 
-
-
-☐   Manage bed capacities 
-
-
-\subsubsection{Hygiene measures in the hospital }\label{H9502955}
-
-
-
-The following sources provide important technical recommendations:
-
-
-☐   RKI: Recommendation of the RKI for hygiene measures in patients with suspected or proven influenza
-
-
-☐   BAuA: Resolution 609 – Occupational safety and health when influenza occurs, with a particular focus on respiratory protection 
-
-
-In addition, hygiene plans should also be reviewed.
-
-
-☐   Personal protective measures for medical staff
-
-
-☐   Waste disposal according to waste code AS 180104 pursuant to LAGA 
-
-
-☐   Internal patient transport
-
-
-If possible the patient should wear a surgical mask, and staff should wear protective clothing and a respirator mask. Contact surfaces and means of transport must be disinfected immediately after transport.
-
-
-☐   Dealing with the deceased 
-
-
-Handling the remains of deceased COVID-19 patients (as of 4 March 2020) does not require special containment as in the case of highly contagious infectious diseases of a different aetiology. When standard hygiene rules are applied, handling infectious corpses does not pose a particular risk of infection. Unprotected contact with secretions that contain pathogens should generally be avoided.
+☐   Possibly organisation of post-exposure prophylaxis
 
 
 \begin{tabu} to \textwidth { |X|X|X| }
@@ -234,11 +168,14 @@ Handling the remains of deceased COVID-19 patients (as of 4 March 2020) does not
  \\
 
 
-Prepared by: &  & Filed under:
+Prepared by: &  &  Filed under:
  \\
 \hline
 
 \end{tabu}
+
+ 
+
 
  
 
