--- a/latex/chapter-16.tex
+++ b/latex/chapter-16.tex
@@ -1,302 +1,128 @@
 \documentclass{article}
 
-\usepackage{hyperref}
+\usepackage{tabu}
 \begin{document}
 
-\title{CRI11Annex – Websites}
+\title{CRI11Annex – Template for checklist format}
 
 \maketitle
 
 
-\subsubsection{Websites}\label{H8354250}
 
 
 
-\textbf{General principles for risk assessment and recommendations for major events (German only), RKI}
+Below is a template which you can use to develop your own checklists.
 
 
-\href{https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/Risiko_Grossveranstaltungen.pdf?__blob=publicationFile}{https://www.rki.de/DE/Content/InfAZ/N/Neuartiges\_Coronavirus/Risiko\_} \href{https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/Risiko_Grossveranstaltungen.pdf?__blob=publicationFile}{Grossveranstaltungen.pdf}
+ 
 
 
-\textbf{Analytical Task Force (ATF), BBK}
+\subsubsection{Checklist – TITLE (template for checklist format)}\label{H9231130}
 
 
-\href{https://www.bbk.bund.de/DE/AufgabenundAusstattung/CBRNSchutz/ATF/ATF_node.html}{https://www.bbk.bund.de/DE/AufgabenundAusstattung/CBRNSchutz/ATF/} \href{https://www.bbk.bund.de/DE/AufgabenundAusstattung/CBRNSchutz/ATF/ATF_node.html}{ATF\_node.html}
 
+\textbf{Header}
 
-\textbf{Selected key terms in population protection (German only), BBK}
 
+ 
 
-\href{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/Praxis_Bevoelkerungsschutz/Glossar_2018.pdf}{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen} \href{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/Praxis_Bevoelkerungsschutz/Glossar_2018.pdf}{/Praxis\_Bevoelkerungsschutz/Glossar\_2018.pdf}
 
+\begin{tabu} to \textwidth { |X|X|X| }
+\hline
 
-\textbf{Committee on Biological Agents (ABAS), BAuA}
 
 
-\href{https://www.baua.de/EN/Tasks/Committee-administration/ABAS/ABAS_node.html}{https://www.baua.de/EN/Tasks/Committee-administration/ABAS/ABAS\_node.html}
+ & \emph{\textbf{Title:}} & \emph{\textbf{Brief and concise}}
+ \\
 
 
-\textbf{Decision No. 1082/2013/EU of the European Parliament and of the Council of 22 October 2013 on serious cross-border threats} \textbf{to health, EU }
+\emph{\textbf{What is the overriding theme? (A checklist should contain at least the following information)}} &   &  
+ \\
 
 
-\href{https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=celex%3A32013D1082}{https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=celex\%3A32013D1082}
+Target groups (e.g. all creators of the checklist) &   & Date (DAY.MONTH.YEAR, 04/03/2020)
+ \\
+\hline
 
+\end{tabu}
 
-\textbf{Biological Agents Ordinance (BioStoffV) }
+ 
 
 
-\href{http://www.gesetze-im-internet.de/englisch_biostoffv/englisch_biostoffv.pdf}{http://www.gesetze-im-internet.de/englisch\_biostoffv/englisch\_biostoffv.pdf}
+Checklists are not a panacea. They do not replace your specific knowledge or your creative solutions to problems. However, they can be very useful in terms of providing support and alleviating the workload when repetitive tasks are a feature of everyday work 
 
 
-\textbf{Supplements to the national pandemic preparedness plan – COVID 19 – new coronavirus disease (German only), RKI}
+\textbf{BUT: One drawback with checklists is that as you work through them, you might overlook something that's not on  the list}.
 
 
-\href{https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/Ergaenzung_Pandemieplan_Covid.html}{https://www.rki.de/DE/Content/InfAZ/N/Neuartiges\_Coronavirus/Ergaenz} \href{https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/Ergaenzung_Pandemieplan_Covid.html}{ung\_Pandemieplan\_Covid.html}
+\subsubsection{Why do I need checklists?}\label{H1070827}
 
 
-\textbf{Suspected cases of Ebola (German only), RKI}
 
+☐   to ensure that nothing is forgotten
 
-\href{https://www.rki.de/DE/Content/InfAZ/E/Ebola/Rahmenkonzept_Ebola.pdf}{https://www.rki.de/DE/Content/InfAZ/E/Ebola/Rahmenkonzept\_Ebola.pdf}
 
+☐   to provide an overview of complex issues
 
-\textbf{Biological agents in health care and welfare facilities (TRBA 250), BAuA}
 
+☐   to support structured processing and the orderly completion of tasks
 
-\href{https://www.baua.de/EN/Service/Legislative-texts-and-technical-rules/Rules/TRBA/TRBA-250.html}{https://www.baua.de/EN/Service/Legislative-texts-and-technical-rules/Rules/TRBA/TRBA-250.html} 
 
+☐   to divide complex tax into manageable chunks
 
-\textbf{Recommendations on sampling for hazard prevention in population protection (German only), BKK.}
 
+☐   to enable workflows to be standardised and to promote efficiency 
 
-\href{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/PublikationenForschung/Fib_Band5_2teAuflage.pdf?__blob=publicationFile}{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen} \href{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/PublikationenForschung/Fib_Band5_2teAuflage.pdf?__blob=publicationFile}{/PublikationenForschung/Fib\_Band5\_2teAuflage.pdf}
 
+☐   to create an overview and help control and document work processes by 'ticking off' completed tasks
 
-\textbf{Recommendation on staff and organisational requirements for the prevention of nosocomial infections (German only), RKI} 
 
+☐   to facilitate the delegation of tasks to deputies
 
-\href{https://www.rki.de/DE/Content/Infekt/Krankenhaushygiene/Kommission/Downloads/Rili_Hygmanagement.pdf}{https://www.rki.de/DE/Content/Infekt/Krankenhaushygiene/Kommission/} \href{https://www.rki.de/DE/Content/Infekt/Krankenhaushygiene/Kommission/Downloads/Rili_Hygmanagement.pdf}{Downloads/Rili\_Hygmanagement.pdf}
 
+ 
 
-\textbf{Estimated Personal Protective Equipment (PPE) Needed for Healthcare Facilities, CDC }
 
+\subsubsection{How do I create a checklist?}\label{H6679445}
 
-\href{https://www.cdc.gov/vhf/ebola/healthcare-us/ppe/calculator.html}{https://www.cdc.gov/vhf/ebola/healthcare-us/ppe/calculator.html}
 
 
-\textbf{European Agreement concerning the International Carriage of Dangerous Goods by Road ( (Accord européen relatif au transport international des marchandises Dangereuses par Route, ADR), UNECE}
+☐   Create your own individual template in which the following information is always included: title of respective checklist, name of the institution, name of the person completing the form, date and/or version. In addition, you can also enter where the checklist is filed/stored.
 
 
-\href{https://www.unece.org/trans/danger/publi/adr/adr2019/19contentse.html}{https://www.unece.org/trans/danger/publi/adr/adr2019/19contentse.html}
+☐   Drawing up a task list: 
 
 
-\textbf{Specialist terms in infection control and epidemiology (German only), RKI} 
+1. Write down all the relevant points/work steps
 
 
-\href{https://www.rki.de/DE/Content/Service/Publikationen/Fachwoerterbuch_Infektionsschutz.pdf?__blob=publicationFile}{https://www.rki.de/DE/Content/Service/Publikationen/Fachwoerterbuch\_} \href{https://www.rki.de/DE/Content/Service/Publikationen/Fachwoerterbuch_Infektionsschutz.pdf?__blob=publicationFile}{Infektionsschutz.pdf}
+2. Discuss with colleagues/superiors and check for completeness
 
 
-\textbf{Official fire service regulation 'Units deployed on CBRN operations' (FwDV 500) (German only),} \textbf{BBK }\href{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/FIS/DownloadsRechtundVorschriften/Volltext_Fw_Dv/FwDV%20500-2012,1.pdf;jsessionid=3BA3A43E8BA30225A703411AEEE48E8A.1_cid320?__blob=publicationFile}{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/FIS/Download} \href{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/FIS/DownloadsRechtundVorschriften/Volltext_Fw_Dv/FwDV%20500-2012,1.pdf;jsessionid=3BA3A43E8BA30225A703411AEEE48E8A.1_cid320?__blob=publicationFile}{sRechtundVorschriften/Volltext\_Fw\_Dv/FwDV\%20500-2012,1.pdf}
+3. Arrange themes chronologically
 
 
-\textbf{German fire service regulation 'Leadership and command in emergency operations' (FwDV 100), BKK}
+☐   The best test of your list is to try it out in practice. If you are working on a special case for the first time, it will probably not yet run perfectly – this gives you an opportunity to revise the checklist.
 
 
-\href{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/FIS/DownloadsRechtundVorschriften/Volltext_Fw_Dv/FwDV-100%20englisch.pdf?__blob=publicationFile}{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/FIS/DownloadsRechtundVorschriften/Volltext\_Fw\_Dv/FwDV-100\%20englisch.pdf}
+ 
 
 
-\textbf{Ordinance on the transport of dangerous goods by road, rail and inland waterways }\textbf{\href{https://www.bmvi.de/SharedDocs/DE/Anlage/G/Gefahrengut/ggvseb-2019-engl.pdf?__blob=publicationFile}{(GGVSEB) }}\href{https://www.bmvi.de/SharedDocs/DE/Anlage/G/Gefahrengut/ggvseb-2019-engl.pdf?__blob=publicationFile}{https://www.bmvi.de/SharedDocs/DE/Anlage/G/Gefahrengut/ggvseb-2019-engl.pdf?\_\_blob=publicationFile}
+\textbf{FOOTER}
 
 
-\textbf{Protecting Health – Assessing Risks, RKI }
+\begin{tabu} to \textwidth { |X|X| }
+\hline
 
 
-\href{https://edoc.rki.de/handle/176904/5453}{https://edoc.rki.de/handle/176904/5453}
 
+\emph{\textbf{Institution (e.g. PUBLIC HEALTH OFFICE,LEIPZIG)}} & \emph{\textbf{Version: (REV\_01)}}
+ \\
 
-\textbf{Guidance on regulations for the Transport of Infectious Substances, WHO}
 
+Created by: (MAXIMA JANE DOE) & Filed under: (c:ordnerX/ordner/xY/dateiname.doc)
+ \\
+\hline
 
-\href{https://www.who.int/csr/resources/publications/biosafety/WHO_HSE_EPR_2008_10.pdf?ua=1}{https://www.who.int/csr/resources/publications/biosafety/WHO\_HSE\_EP} \href{https://www.who.int/csr/resources/publications/biosafety/WHO_HSE_EPR_2008_10.pdf?ua=1}{R\_2008\_10.pdf}
-
-
-\textbf{Notes of the outpatient management of suspected COVID-19 cases (German only), RKI}
-
-
-\href{https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/ambulant.html}{https://www.rki.de/DE/Content/InfAZ/N/Neuartiges\_Coronavirus/ambula} \href{https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/ambulant.html}{nt.html}
-
-
-\textbf{Forming teams – the administrative-organisational component (German only), BKK}
-
-
-\href{http://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/FIS/DownloadsRechtundVorschriften/IMKBeschluesse/IMK174TOP26Anlg2.pdf}{http://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/FIS/Downloads} \href{http://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/FIS/DownloadsRechtundVorschriften/IMKBeschluesse/IMK174TOP26Anlg2.pdf}{RechtundVorschriften/IMKBeschluesse/IMK174TOP26Anlg2.pdf}
-
-
-\textbf{Advice on using respirators (German only), DGUV}
-
-
-\href{https://publikationen.dguv.de/regelwerk/regeln/1011/benutzung-von-atemschutzgeraeten}{https://publikationen.dguv.de/regelwerk/regeln/1011/benutzung-von-atemschutzgeraeten}
-
-
-\textbf{Infection risks in the emergency services (German only), LIA} 
-
-
-\href{https://www.lia.nrw.de/themengebiete/Arbeitsschutz-und-Gesundheit/Biostoffe/Infektionsgefaehrdung-im-Rettungsdienst/index.html}{https://www.lia.nrw.de/themengebiete/Arbeitsschutz-und-Gesundheit/Biostoffe/Infektionsgefaehrdung-im-Rettungsdienst/index.html} 
-
-
-\textbf{Communicable diseases A-Z (German only), RKI }
-
-
-\href{https://www.rki.de/DE/Content/InfAZ/InfAZ_marginal_node.html}{https://www.rki.de/DE/Content/InfAZ/InfAZ\_marginal\_node.html}
-
-
-\textbf{International Health Regulations (German only), RKI }
-
-
-\href{https://www.rki.de/DE/Content/Infekt/IGV/Gesetz_IGV_de-en.pdf}{https://www.rki.de/DE/Content/Infekt/IGV/Gesetz\_IGV\_de-en.pdf}
-
-
-\textbf{Infectious Substances, Class 6.2 Cat. A, ADR} 
-
-
-\href{https://adrbook.com/en/2017/ADR/2.2.62}{https://adrbook.com/en/2017/ADR/2.2.62} 
-
-
-\textbf{Influenza pandemic preparedness plan (German only), RKI}
-
-
-\href{https://www.rki.de/DE/Content/InfAZ/I/Influenza/Pandemieplanung/Pandemieplanung_Node.html}{https://www.rki.de/DE/Content/InfAZ/I/Influenza/Pandemieplanung/Pandemieplanung\_Node.html}
-
-
-\textbf{Commission for Hospital Hygiene and Infection Prevention, RKI.}
-
-
-\href{https://www.rki.de/EN/Content/Institute/Committees/KRINKO/KRINKO_node_en.html}{https://www.rki.de/EN/Content/Institute/Committees/KRINKO/KRINKO\_node\_en.html}
-
-
-\textbf{Guideline on Biological Incident Response \& Environmental Sampling, EU}
-
-
-\href{https://ec.europa.eu/health/ph_threats/com/preparedness/docs/biological.pdf}{https://ec.europa.eu/health/ph\_threats/com/preparedness/docs/biological.pdf}
-
-
-\textbf{Guidelines on crisis communication (German only), BMI}
-
-
-\href{https://www.bmi.bund.de/SharedDocs/downloads/DE/publikationen/themen/bevoelkerungsschutz/leitfaden-krisenkommunikation.pdf}{https://www.bmi.bund.de/SharedDocs/downloads/DE/publikationen/the} \href{https://www.bmi.bund.de/SharedDocs/downloads/DE/publikationen/themen/bevoelkerungsschutz/leitfaden-krisenkommunikation.pdf}{men/bevoelkerungsschutz/leitfaden-krisenkommunikation.pdf}
-
-
-\textbf{List of tested and recognised disinfection agents and methods (German only), RKI}
-
-
-\href{https://www.rki.de/DE/Content/Infekt/Krankenhaushygiene/Desinfektionsmittel/Desinfektionsmittellist/Desinfektionsmittelliste_node.html}{https://www.rki.de/DE/Content/Infekt/Krankenhaushygiene/Desinfektion} \href{https://www.rki.de/DE/Content/Infekt/Krankenhaushygiene/Desinfektionsmittel/Desinfektionsmittellist/Desinfektionsmittelliste_node.html}{smittel/Desinfektionsmittellist/Desinfektionsmittelliste\_node.html}
-
-
-\textbf{Matrix of the extent of damage and likelihood of occurrence (German only), BBK}
-
-
-\href{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Downloads/Krisenmanagement/matrix_abb.html}{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Downloads/Kr} \href{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Downloads/Krisenmanagement/matrix_abb.html}{isenmanagement/matrix\_abb.html}
-
-
-\textbf{Multilateral agreement M315 (German only), RKI }
-
-
-\href{https://www.rki.de/DE/Content/InfAZ/E/Ebola/Muster_Verpackungsanleitung.pdf?__blob=publicationFile}{https://www.rki.de/DE/Content/InfAZ/E/Ebola/Muster\_Verpackungsanleit} \href{https://www.rki.de/DE/Content/InfAZ/E/Ebola/Muster_Verpackungsanleitung.pdf?__blob=publicationFile}{ung.pdf} 
-
-
-\textbf{How to proceed when powder is discovered (German only), RKI}
-
-
-\href{https://www.rki.de/DE/Content/Infekt/Biosicherheit/Poststellen/Pulverfund.pdf}{https://www.rki.de/DE/Content/Infekt/Biosicherheit/Poststellen/Pulverfund.pdf}
-
-
-\textbf{Advice on emergency preparedness and what to do in an emergency (German only), BBK}
-
-
-\href{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/Broschueren_Flyer/Buergerinformationen_A4/Ratgeber_Brosch.pdf}{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen} \href{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/Broschueren_Flyer/Buergerinformationen_A4/Ratgeber_Brosch.pdf}{/Broschueren\_Flyer/Buergerinformationen\_A4/Ratgeber\_Brosch.pdf}
-
-
-\textbf{Council Directive 89/686/EEC of 21 December 1989 on the approximation of the laws of the Member States relating to personal protective equipment }
-
-
-\href{https://eur-lex.europa.eu/legal-content/en/TXT/?uri=CELEX%3A31989L0686}{https://eur-lex.europa.eu/legal-content/en/TXT/?uri=CELEX\%3A31989L0686}
-
-
-\textbf{Risk assessment in population protection (German only)} 
-
-
-\href{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/Praxis_Bevoelkerungsschutz/PiB_16_Risikoanalyse_im_Bevoelkerungsschutz.pdf}{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen} \href{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/Praxis_Bevoelkerungsschutz/PiB_16_Risikoanalyse_im_Bevoelkerungsschutz.pdf}{/Praxis\_Bevoelkerungsschutz/PiB\_16\_Risikoanalyse\_im\_Bevoelkerungssc} \href{https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/Praxis_Bevoelkerungsschutz/PiB_16_Risikoanalyse_im_Bevoelkerungsschutz.pdf}{hutz.pdf}
-
-
-\textbf{Risk management in medical practices (German only), RKI}
-
-
-\href{https://www.bundesaerztekammer.de/fileadmin/user_upload/downloads/Risikomanagement_in_Arztpraxen.pdf}{https://www.bundesaerztekammer.de/fileadmin/user\_upload/downloads} \href{https://www.bundesaerztekammer.de/fileadmin/user_upload/downloads/Risikomanagement_in_Arztpraxen.pdf}{/Risikomanagement\_in\_Arztpraxen.pdf}
-
-
-\textbf{Competence and Treatment Centres for high consequence infectious diseases (STAKOB), RKI}
-
-
-\href{https://www.rki.de/EN/Content/infections/biological/Stakob/Stakob_node.html;jsessionid=84B693643259B280D605DEF7D2767A29.internet051}{https://www.rki.de/EN/Content/infections/biological/Stakob/Stakob\_node.html;jsessionid=84B693643259B280D605DEF7D2767A29.internet051}
-
-
-\textbf{Structures and measures, national pandemic preparedness plan part 1 (German only), RKI }
-
-
-\href{https://edoc.rki.de/handle/176904/187}{https://edoc.rki.de/handle/176904/187}
-
-
-\textbf{Technical Rules for Biological Agents (TRBA), BAuA}
-
-
-\href{https://www.baua.de/EN/Service/Legislative-texts-and-technical-rules/Rules/TRBA/TRBA.html}{https://www.baua.de/EN/Service/Legislative-texts-and-technical-rules/Rules/TRBA/TRBA-250.html}
-
-
-\textbf{TRBA 130, BAuA }
-
-
-\href{https://www.baua.de/EN/Service/Legislative-texts-and-technical-rules/Rules/TRBA/TRBA-130.html}{https://www.baua.de/EN/Service/Legislative-texts-and-technical-rules/Rules/TRBA/TRBA-130.html}
-
-
-
-
-\subsubsection{\emph{\textbf{Crisis management}}}\label{H8778968}
-
-
-
-\textbf{Notification of biological events (German only), RKI}
-
-
-\href{https://www.rki.de/DE/Content/Infekt/IfSG/Meldeboegen/Meldung_12/meldung_12_node.html}{https://www.rki.de/DE/Content/Infekt/IfSG/Meldeboegen/Meldung\_12/me} \href{https://www.rki.de/DE/Content/Infekt/IfSG/Meldeboegen/Meldung_12/meldung_12_node.html}{ldung\_12\_node.html}
-
-
-\textbf{Notification of hazards in the chemical sector (German only), BBK} 
-
-
-\href{https://www.bbk.bund.de/SharedDocs/Kurzmeldungen/BBK/DE/2017/IGV_Meldebogen_Info_WHO_Chemie.html}{https://www.bbk.bund.de/SharedDocs/Kurzmeldungen/BBK/DE/2017/IGV} \href{https://www.bbk.bund.de/SharedDocs/Kurzmeldungen/BBK/DE/2017/IGV_Meldebogen_Info_WHO_Chemie.html}{\_Meldebogen\_Info\_WHO\_Chemie.html} 
-
-
-\textbf{Care of patients infected with highly pathogenic organisms outside of special isolation units (Resolution 610), BAuA}
-
-
-\href{https://www.baua.de/EN/Service/Legislative-texts-and-technical-rules/Rules/TRBA/Resolution-610.html}{https://www.baua.de/EN/Service/Legislative-texts-and-technical-rules/Rules/TRBA/Resolution-610.html}
-
-
-\textbf{Guidelines on the disposal of waste from health service}\textbf{\href{https://www.laga-online.de/documents/m_2_3_1517834373.pdf}{ facilities (German only), LAGA}}
-
-
-\href{https://www.laga-online.de/documents/m_2_3_1517834373.pdf}{https://www.laga-online.de/documents/m\_2\_3\_1517834373.pdf}
-
-
-\textbf{Warning App NINA (German only), BBK}
-
-
-\href{https://www.bbk.bund.de/DE/NINA/Warn-App_NINA.html}{https://www.bbk.bund.de/DE/NINA/Warn-App\_NINA.html}
-
-
-\textbf{Objectives of infection control measures (German only), RKI}
-
-
-\href{https://www.rki.de/DE/Content/Infekt/EpidBull/Archiv/2020/Ausgaben/07_20.pdf}{https://www.rki.de/DE/Content/Infekt/EpidBull/Archiv/2020/Ausgaben/07} \href{https://www.rki.de/DE/Content/Infekt/EpidBull/Archiv/2020/Ausgaben/07_20.pdf}{\_20.pdf} 
-
+\end{tabu}
 \end{document}
