Update from Fidus Writer

--- a/latex/chapter-3.tex
+++ b/latex/chapter-3.tex
@@ -57,7 +57,7 @@ Structuring operational plans as shown below has proved successful:
 
 \begin{figure}
 \scaledgraphics{4917fd29-2d93-4090-823e-0786d0016fc5.png}{1}
-\caption*{Figure 1: \emph\{Structure of an operational plan\}}\label{F85990681}
+\caption*{Figure 1: \emph{Structure of an operational plan}}\label{F85990681}
 \end{figure}
 
 
