Update from Fidus Writer

--- a/latex/chapter-4.tex
+++ b/latex/chapter-4.tex
@@ -94,15 +94,10 @@ In Germany, at the level of cities and administrative districts the respective o
 
 A management or disaster risk management team takes care of all the operational-tactical measures that arise, e.g. formation of sections, provision of personnel and reserves, or the establishment and operation of a communication structure.
 
-
-
 \begin{figure}
 \scaledgraphics{90bfad67-6e8a-4cc6-b7c8-76ac64997bf0.png}{1}
-\caption*{Figure 2: \emph\{\textbf\{ \}\}Structure of a management team}\label{F75946271}
+\caption*{Figure 2: \emph{\textbf{ }}Structure of a management team}\label{F75946271}
 \end{figure}
-
-
-\emph{\textbf{Figure 4: Structure of a management team}}
 
 
 In general, the following staff functions (S) should be established in both teams:
@@ -152,9 +147,6 @@ According to this advice the administrative team should include representatives 
 \end{figure}
 
 
-\emph{\textbf{Figure 5: Structure of an administrative team}}
-
-
 The 'team leader' is responsible for leading and coordinating the administrative team. This individual takes decisions on measures to be introduced, defines objectives, and decides on the appointment of further situation-specific members. If political responsibility does not rest with the administrative team leader, the team leader decides which measures will be determined within the team and which ones by the body with overall political responsibility.
 
 
@@ -180,9 +172,6 @@ The graphic below provides an overview of how the teams work together when crise
 \scaledgraphics{79e588fd-6cf6-494d-ab3b-92e25bbd1c8b.png}{1}
 \caption*{Figure 4: The teams}\label{F84973601}
 \end{figure}
-
-
-\emph{\textbf{Figure 6: The teams}}
 
 
 \subsection{The crisis team in the public health office}\label{H2640525}
@@ -229,7 +218,7 @@ The team operates on an objectives-oriented basis, in closed iterative conceptua
 \end{figure}
 
 
-\emph{\textbf{Figure 7: How the crisis team works}}
+\emph{\textbf{ }}
 
 
 \subsection{Functions and tasks in the crisis team}\label{H1128570}
